--- a/assets/sass/base/typography/base.scss
+++ b/assets/sass/base/typography/base.scss
@@ -17,12 +17,10 @@ textarea,
 select,
 button {
 	color: $base-colour;
-	font-family: 'Libre Baskerville', Arial, Helvetica, Geneva, sans-serif;
+	font-family: 'Proxima-Nova-Soft', Arial, Helvetica, Geneva, sans-serif;
 	font-size: $base-font-size;
-	font-feature-settings: 'liga', 'kern'; //= http://elliotjaystocks.com/blog/kerning/
+	//font-feature-settings: 'liga', 'kern'; //= http://elliotjaystocks.com/blog/kerning/
 	font-kerning: normal; 
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 	line-height: $base-line-height;
 }
 
