--- a/assets/sass/helpers/variables.scss
+++ b/assets/sass/helpers/variables.scss
@@ -8,9 +8,10 @@ $white: #FFF;
 $black: #000;
 
 $dark-1: #2D2D2D;
-$dark-2: #454545;
+$dark-2: #242424;
+$dark-3: #454545;
 
-$grey-1: #EBEBEB;
+$grey-1: #8E8E8E;
 
 $green-1: #57B275;
 $green-2: #4CA769;
@@ -49,9 +50,7 @@ $ter--alt: $yellow-2;
 //
 // ===========================================================
 
-$sg-nav-colour:				$dark-1;
-
-$base-colour: 				$black;
+$base-colour: 				$dark-2;
 $border-colour:				$grey-1;
 $highlight-colour:			#DFE7E9;
 $border-width: 				0.2rem;
