--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -39,8 +39,8 @@ Boilerplate version: 1.0
 // ========================================================= //
 
 @import "modules/header.scss";
-//@import "modules/nav.scss";
-@import "modules/nav-push.scss";
+@import "modules/nav.scss";
+//@import "modules/nav-push.scss";
 @import "modules/footer.scss";
 @import "modules/article.scss";
 @import "modules/author.scss";
