--- a/assets/sass/base/icons.scss
+++ b/assets/sass/base/icons.scss
@@ -4,12 +4,103 @@
 //
 // ===========================================================
 
-.icon--logo {
-	background: $pri;
-	border: .3rem solid $dark-1;
-	border-radius: 50%;
-	box-shadow: 0 0 0 .3rem $pri;
-	display: block;
-	height: 3rem;
-	width: 3rem;
+@font-face {
+	font-family: 'geckotree_icon_font';
+	src:url('../../fonts/geckotree_icon_font.eot');
+	src:url('../../fonts/geckotree_icon_font.eot?#iefix') format('embedded-opentype'),
+		url('../../fonts/geckotree_icon_font.ttf') format('truetype'),
+		url('../../fonts/geckotree_icon_font.woff') format('woff'),
+		url('../../fonts/geckotree_icon_font.svg#geckotree_icon_font') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'geckotree_icon_font';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon--logo:before 			{ content: "\e001"; }
+.icon--coffee-mug:before 	{ content: "\e002"; }
+.icon--heart:before 		{ content: "\e003"; }
+.icon--briefcase:before 	{ content: "\e004"; }
+.icon--send:before 			{ content: "\e005"; }
+.icon--search:before 		{ content: "\e006"; }
+.icon--chat:before 			{ content: "\e007"; }
+.icon--feather:before 		{ content: "\e008"; }
+.icon--list:before 			{ content: "\e009"; }
+.icon--close:before 		{ content: "\e012"; }
+
+.icon--calendar:before {
+	content: "\e010";
+}
+.icon--stopwatch:before {
+	content: "\e011";
+}
+
+.icon--review:before {
+	content: "\e014";
+}
+.icon--twitter:before {
+	content: "\e019";
+}
+.icon--dribbble:before {
+	content: "\e021";
+}
+.icon--tutorial:before {
+	content: "\1f516";
+}
+.icon--download:before {
+	content: "\1f4e5";
+}
+.icon--view:before {
+	content: "\1f440";
+}
+.icon--news:before {
+	content: "\e902";
+}
+.icon--design:before {
+	content: "\e226";
+}
+.icon--instagram:before {
+	content: "\e022";
+}
+.icon--check:before {
+	content: "\2713";
+}
+.icon--piggybank:before {
+	content: "\e545";
+}
+.icon--store:before {
+	content: "\1f3ec";
+}
+.icon--user:before {
+	content: "\1f464";
+}
+.icon--megaphone:before {
+	content: "\1f4e2";
+}
+.icon--cross:before {
+	content: "\2421";
+}
+.icon--info:before {
+	content: "\2139";
+}
+.icon--arrow-left:before {
+	content: "\e600";
+}
+.icon--arrow-down:before {
+	content: "\e601";
+}
+.icon--arrow-right:before {
+	content: "\e602";
 }
